--- a/src/pages/speakers.astro
+++ b/src/pages/speakers.astro
@@ -30,7 +30,7 @@ import { Link } from "lucide-react";
                         University of Arizona, Hong Kong University of Science
                         and Technology, University of California at Irvine, and
                         the National University of Singapore.
-                    </p>
+                    </p><br>
                     <p class="text-lg text-left">
                         Professor Kallapur researches on financial and
                         managerial accounting, auditing, and risk management. He
@@ -40,7 +40,7 @@ import { Link } from "lucide-react";
                         India and the UK. He is currently working on scientific
                         inference in accounting research beyond the use of
                         p-values.
-                    </p>
+                    </p><br>
                     <p class="text-lg text-left">
                         He has been an editor of <i> The Accounting Review</i>
                          from 2008 to 2011, the first person from outside North
@@ -49,7 +49,7 @@ import { Link } from "lucide-react";
                         accounting journals, and is on the editorial boards of
                         the Journal of Accounting and Public Policy, and the
                         Journal of Financial Reporting.
-                    </p>
+                    </p><br>
                     <p class="text-lg text-purple-800 mt-3">
                         <a
                             href="https://www.isb.edu/en/research-thought-leadership/faculty/faculty-directory/sanjay-kallapur.html"
@@ -65,46 +65,59 @@ import { Link } from "lucide-react";
             <div class="flex flex-col md:flex-row space-x-4">
                 <div class="md:w-1/2 flex items-center justify-center" data-aos="fade-up">
                     <img
-                        src="https://lh6.googleusercontent.com/c_Mo3odxf-PN48O3YYIZS-Vdp-vTmEyJ3XOegjfnJw6g69e5oa7NTJNyxzalOjuk4XqQktp2EVwvwcxtDtmKzl64zp6-MM7vZCVbqu-YetpEvLpF6daCtKCWDejon4Y1AA=w1280"
+                        src="https://www.idsj.org/wp-content/uploads/2023/09/vinish.jpg"
+                        height = "234px"
+                        width = "352px"
                         alt="prof"
-                        class="px-10 py-5 bg-white max-w-[324px] lg:max-w-[384px] max-h-auto rounded-2xl"
+                        class="px-10 py-5 bg-white max-w-[324px] lg:max-w-[384px] h-auto rounded-2xl"
                     />
                 </div>
                 <div class="md:w-1/2 flex flex-col items-center justify-center" data-aos="fade-up">
-                    <h1 class="text-2xl mt-4">Prof. Abhiroop Mukhopadhyay</h1>
-                    <h2 class="text-blue-600 text-xl mb-2">ISI Delhi</h2>
+                    <h1 class="text-2xl mt-4">Dr Vinish Kumar Kathuria</h1>
+                    <h2 class="text-blue-600 text-xl mb-2">IDS Jaipur</h2>
                     <p class="text-lg text-left">
-                        Prof. Abhiroop Mukhopadhyay is a professor in Indian
-                        Statistical Institute-Delhi Centre. He holds other
-                        visiting and Honorary Research Positions from various
-                        institutions like Ashoka University, University of
-                        Connecticut, IIM Bangalore, Chr. Michelson Institute,
-                        Bergen, Global labour organisation, Institute for the
-                        study of labour, Bonn, London School of Economics,
-                        University of Carlos 3, Madrid, and Groupement de
-                        Recherche en Economie Quantitative d'Aix Marseille
-                        (GREQAM).
-                    </p>
+                        Dr Vinish Kumar Kathuria, Director of the Institute 
+                        of Development Studies (IDS), Jaipur, is an alumnus 
+                        of NIT Kurukshetra. He is on lien from the Indian Institute
+                        of Technology (IIT) Bombay, where he was Shailesh J. Mehta, 
+                        Chair Professor at SJMSOM of IIT Bombay. He is in the teaching 
+                        and research profession since 1998 after his PhD in Economics from IGIDR, 
+                        an RBI funded institute. At IIT Bombay, he was Professor-in-charge (PIC) 
+                        of Bank of Baroda Innovation Centre (BoBIC) from Nov. 2019 to Sep. 2023.                    
+                        </p><br>
                     <p class="text-lg text-left">
-                        His primary specialization is in econometric methods
-                        applied to topics in the field of education in
-                        developing countries (in particular, India). Recent
-                        topics of research include the impact of better school
-                        infrastructure on rural schooling attendance, how to
-                        design teacher transfer programs and the impact of the
-                        distribution of human capital on growth and development.
-                        Some of his research focuses on issues related to public
-                        policy: in particular, the National Rural Employment
-                        Guarantee Scheme (NREGS)- a big public workfare program
-                        in India; the political economy of it's implementation
-                        and the effects of NREGS on education and borrowing. He
-                        has also worked on issues related to health: the
-                        economic effects of HIV-AIDS and Cancer.
-                    </p>
+                       His teaching and research interests are in Macroeconomics, 
+                    Industrial, Environment and Energy Economics. Before joining
+                 IIT Bombay, he was on a Fulbright Senior Researcher fellowship
+                  at the University of Colorado, Boulder (USA). His
+                   publications are in several reputed international journals including
+                    Research Policy, Applied Economics, Energy Policy, Journal of
+                     Development Studies, Journal of Comparative Economics,
+                      World Development, Oxford Economic Papers,
+                       Ecological Economics, among others.
+                    </p><br>
+                    <p class="text-lg text-left">
+                    He has pursued his post-doc from the University of Gothenburg, 
+                    Sweden, in the area of Environmental Economics and
+                    a PhD internship from UNU/INTECH, Maastricht, The Netherlands
+                    . UNESCO short-listed his thesis for its Management of
+                    Social Transformation (MOST) award in 2000-01
+                    . In 2012, he was awarded the Mahalanobis Memorial Medal
+                    (National) Award 2010 in the area of
+                    Quantitative Economics by The Indian Econometric Society
+                    (TIES). In a recent paper in 2016, he was ranked as the top
+                    researcher in economics among all business school researchers in 
+                    the country and featured in the top 5% of researchers of business schools
+                    across India. In December 2015, the NIT Kurukshetra Alumni Association 
+                    awarded him the ‘Distinguished Alumnus Award’ in the field of Education.
+                    He has also served as a Member of the Standing Committee on Economics 
+                    Statistics, Ministry of Statistics and Programme Implementation (MoSPI),
+                    GoI from Dec. 2019 to Nov. 2022.
+                    </p><br>
                    
                     <p class="text-lg text-purple-800 mt-3">
                         <a
-                            href="https://sites.google.com/view/abhiroop/home"
+                            href="https://www.idsj.org/faculty-category/faculty/"
                             target="_blank"
                             class="flex"
                         >
