--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,9 +55,12 @@ import MainLayout from "../layouts/MainLayout.astro";
                     </p>
                 </div>
                 <div class="my-6 md:my-8" data-aos="fade-up">
-                    <h1 class="mb-2 text-3xl text-blue-600 text-left">
+                <h1 class="mb-2 text-3xl text-blue-600 text-left">
                         IMPORTANT DATES
                     </h1>
+                <p color = "red">
+                    <a href="https://drive.google.com/file/d/1sTSEicKlxKNh5UrTBx9T965we4XjT2OH/view?usp=sharing.pdf" target="_blank"><span style="color: red;"><u>ACEF-Final Program</u></span></a>
+                </p><br>      
                     <ul>
                         <li>
                             Last date for Paper submission: January 03, 2023
