--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,8 +58,8 @@ import MainLayout from "../layouts/MainLayout.astro";
                 <h1 class="mb-2 text-3xl text-blue-600 text-left">
                         IMPORTANT DATES
                     </h1>
-                <p color = "red">
-                    <a href="https://drive.google.com/file/d/1sTSEicKlxKNh5UrTBx9T965we4XjT2OH/view?usp=sharing.pdf" target="_blank"><span style="color: red;"><u>ACEF-Final Program</u></span></a>
+                <p>
+                    <a href="https://drive.google.com/file/d/1k0TwCeF_xZ_fSZjoFRp5EqjogvdvXe8C/view?usp=sharing" target="_blank"><span style="color: blue;"><u>Conference Schedule</u></span></a>
                 </p><br>      
                     <ul>
                         <li>
