updated the leadership page

--- a/src/pages/leadership.astro
+++ b/src/pages/leadership.astro
@@ -48,40 +48,30 @@ import { Link } from "lucide-react";
         <div class="flex flex-col md:flex-row space-x-4" >
             <div class="md:w-1/2 flex items-center justify-center" data-aos="fade-up">
                 <img
-                    src="https://www.mobilityindia.com/wp-content/uploads/2022/01/G.sundar-2-450x369.jpg"
+                    src="../soumyo.jpeg"
                     alt="prof"
                     class="px-10 py-5 bg-white max-w-[324px] lg:max-w-[384px] max-h-auto rounded-2xl"
                 />
             </div>
             <div class="md:w-1/2" data-aos="fade-up">
-                <h1 class="text-2xl mt-4">Prof. G. Sundar</h1>
+                <h1 class="text-2xl mt-4">Prof. Soumyo Mukherji</h1>
                 <h2 class="text-blue-600 text-xl mb-2">
                     Director, BITS Pilani Hyderabad Campus
                 </h2>
                 <p class="text-lg text-left">
-                    G Sundar joined the Chemistry Department at BITS
-                    Pilani in 1987, was designated Professor in 2000,
-                    and is now Senior Professor. He teaches courses in
-                    Thermodynamics, Quantum Chemistry, and Chemical
-                    Instrumentation.
-                </p>
+                     Prof. Soumyo Mukherji was appointed as the  
+                     Director of BITS Pilani,Hyderabad Campus  with effect from January 1, 2024. 
+                </p><br>
                 <p class="text-lg text-left">
-                    As Director (Off Campus Programmes and Industry
-                    Engagement) since 2014, a responsibility he
-                    continues to hold, and earlier as Deputy Director,
-                    Prof. Sundar has been leading a comprehensive
-                    transformation of the Work Integrated Learning
-                    Programmes. He was also associated closely with
-                    helping direct and manage the expansion of the
-                    Practice School programme over the years. Earlier,
-                    for several years he was associated with the Student
-                    Welfare Division in the Pilani campus, as Chief
-                    Warden, and then as Dean.
-                </p>    
+                    Prof Mukherji was serving in the Department of Biosciences & Bioengineering as the Madhuri Sinha Chair Professor in Biomedical Engineering at IIT Bombay. He is also an Associated Faculty Member at the Centre for Research in Nanotechnology and Sciences and the Centre of Excellence in Nanoelectronics.
+                </p><br>
                 <p class="text-lg text-left">
-                    Prof. Sundar took charge as Director of the
-                    Hyderabad campus on 17 July, 2016.
-                </p>
+He obtained his Ph.D. from the University of North Carolina (Chapel Hill, USA). He completed his B.Tech. in Instrumentation Engineering from IIT Kharagpur and did his M.S. from Colorado State University (Fort Collins, USA). He has been conferred the Fellowship of the Indian National Academy of Engineering (FNAE) and Fellowship of the National Academy of Sciences, India (FNASc). 
+                </p><br>    
+                <p class="text-lg text-left">
+Professor Mukherji has served in several administrative positions at IIT Bombay. He served as the Dean Student Affairs (2015-2019), as the Head of the Centre for Research in Nanotechnology & Science as well as the Head of the Sophisticated Analytical Instrument Facility (2010-13). He has supervised more than 30 PhD scholars and more than 60 Masters students.
+
+                </p> 
             </div>
         </div>
     </div>
